第三次修改，使项目模块化： 1.core模块：核心算法类的实现。 2.ui模块：可视化的实现。 3.app模块：最终调用core和app的终端。 4.utils：实现用户的输入、输出等上述模块不负责的工作。 （ps：已经插入排序）